Closed
Bug 576492
Opened 16 years ago
Closed 16 years ago
Default preferences for extensions are ignored
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | beta2+ |
People
(Reporter: jwkbugzilla, Assigned: benjamin)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
314.19 KB,
application/x-xpinstall
|
Details | |
|
7.13 KB,
patch
|
mossop
:
review+
|
Details | Diff | Splinter Review |
I tested the effects of bug 568691 with the hourly builds - Adblock Plus has been updated and should work correctly. However, Adblock Plus is broken in these builds, reason being that defaults/preferences/adblockplus.js is apparently ignored. This regressed between 1278010951-20100701120231-255acc6edc7b and 1278012911-20100701123511-836fd3f8feba which matches bug 568691 landing.
Attaching Adblock Plus XPI for testing - current development build doesn't have the necessary changes yet. After installing you can check under about:config - no extensions.adblockplus.* preferences there (other than the ones overridden by the user).
Comment 2•16 years ago
|
||
Is Chatzilla also affected by this bug ? When I try to use it I get the dialog box asking for : What application to use.
Comment 3•16 years ago
|
||
See https://bugzilla.mozilla.org/attachment.cgi?id=455649 in Bug 576474,
Most of extensions are affected even if they did not use XPCOM registrations.
| Reporter | ||
Comment 4•16 years ago
|
||
No, Chatzilla simply wasn't updated for the changes from bug 568691 yet - https://developer.mozilla.org/en/XPCOM/XPCOM_changes_in_Gecko_1.9.3. Its developer will need to perform the necessary changes.
Updated•16 years ago
|
Severity: normal → major
Keywords: regression
This affects my extension as well.
I was wondering why it wasn't working for me when I updated to the new registration method...
Sorry for the bugspam, but I just noticed this:
I set up my extension to work with both Fx 3.6 and 4.0 by checking XPCOMUtils for generateNSGetFactory.
When I check in 3.6, all of my preferences show. But if I upgrade to the latest 4.0 from the same profile, my extension's preferences disappear.
Updated•16 years ago
|
Comment 7•16 years ago
|
||
The same problem is also affecting Direct2D. It appears for example gfxWindowsPlatform::Init() is called before the preferences are read.
| Assignee | ||
Comment 8•16 years ago
|
||
Bas, that doesn't sound like the same bug.
| Assignee | ||
Comment 9•16 years ago
|
||
This was easier than I thought it was going to be. With tests!
Attachment #455693 -
Flags: review?(dtownsend)
Comment 10•16 years ago
|
||
Does this bug also explain why I can't retain any Zoom sizes between Fx startups? The size defaults to a very small font.
| Assignee | ||
Comment 11•16 years ago
|
||
No, it does not.
Updated•16 years ago
|
Attachment #455693 -
Flags: review?(dtownsend) → review+
Comment 12•16 years ago
|
||
I ask because he Zoom options are stored in Prefs and it seems they aren't being read.
Comment 13•16 years ago
|
||
Can we get a respin for the nightlies if this is checked in ?
Comment 14•16 years ago
|
||
(In reply to comment #12)
> I ask because he Zoom options are stored in Prefs and it seems they aren't
> being read.
But they aren't extension default prefs which is what this bug is about (in fact they are site specific prefs which are a different system entirely)
(In reply to comment #13)
> Can we get a respin for the nightlies if this is checked in ?
Yes I think that would be a good idea.
Comment 15•16 years ago
|
||
(In reply to comment #0)
> Attaching Adblock Plus XPI for testing - current development build doesn't have
> the necessary changes yet. After installing you can check under about:config -
> no extensions.adblockplus.* preferences there (other than the ones overridden
> by the user).
latest nightly build for linux , updated noscript to the latest dev build with a workaround for the same bug : after installing the adblock plus test version attached here , the noscript preferences were reset too.
| Assignee | ||
Comment 16•16 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/a844e2a8c654
We're going to respin nightlies to pick this up.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 17•16 years ago
|
||
Confirmed: Adblock Plus 1.3a.20100702 works fine on Minefield build 20100702102256.
Comment 18•16 years ago
|
||
Confirmed : Adblock Plus 1.3a.20100702 and NoScript 1.9.9.98rc6 work both with the latest Mindfield build
You need to log in
before you can comment on or make changes to this bug.
Description
•