Bug 576492 - Load default preferences from extension defaults, r=Mossop